# lychee-wallpaper

./: CMakeLists.txt  README.md
.github/workflows/: archlinux-build.yaml
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/imagewallpaperexample/: CMakeLists.txt  Main.qml  main.cpp
src/: CMakeLists.txt  qmldir  wallpaperglobal.cpp  wallpaperglobal.h
